--- a/game_protect/protect/protect.vcxproj
+++ b/game_protect/protect/protect.vcxproj
@@ -147,6 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="anti_debug.h" />
     <ClInclude Include="CRC32.h" />
     <ClInclude Include="MD5.h" />
     <ClInclude Include="protect.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="anti_debug.cpp" />
     <ClCompile Include="CRC32.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
